--- a/HW11.ipynb
+++ b/HW11.ipynb
@@ -6,7 +6,7 @@
       "name": "HW11.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMlpWcQxbxF3Z+o6n5aywIy",
+      "authorship_tag": "ABX9TyP/5G/F5f8UJnvuWm25wTB6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "ejLGbkEMAwEd"
       },
@@ -80,9 +80,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-vnk4qarBGMc",
-        "outputId": "78d1fc71-819a-436b-be55-98f71717572d"
+        "outputId": "9b0244ec-cfdd-4026-c6c3-25675c5e2ef4"
       },
-      "execution_count": 5,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -92,7 +92,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 22
         }
       ]
     },
@@ -128,9 +128,9 @@
           "height": 516
         },
         "id": "U2_YcJ7oc5DE",
-        "outputId": "10e66e31-eb23-47da-c80e-dbd61683e421"
+        "outputId": "2636fa13-bcc7-41f4-bc54-77c5250fea45"
       },
-      "execution_count": 10,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
@@ -154,7 +154,7 @@
       "metadata": {
         "id": "yCHlgYdLd_kG"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -176,8 +176,8 @@
         "    raise BaseException(\"Error : beta, rho, and sigma must be nonnegative.\")\n",
         "  dS = np.zeros(3)\n",
         "  dS[0] = sigma*(S[1]-S[0])\n",
-        "  dS[1] = S[0]*(rho-S[2])-S[1]\n",
-        "  dS[2] = S[0]*S[1]-beta*S[2];\n",
+        "  dS[1] = (S[0]*(rho-S[2]))-S[1]\n",
+        "  dS[2] = (S[0]*S[1])-(beta*S[2]);\n",
         "  return dS\n",
         "\n",
         "s = np.array([1, 2, 3])\n",
@@ -189,9 +189,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gWeqF5xBefXK",
-        "outputId": "7dacb555-6652-4888-aa4e-8b231b2af315"
+        "outputId": "4b241003-508f-44ca-a838-c3af145386c9"
       },
-      "execution_count": 14,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -201,7 +201,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 24
         }
       ]
     },
@@ -213,7 +213,7 @@
       "metadata": {
         "id": "QlUd3t7ngFL_"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -233,16 +233,16 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "def my_lorenz_solver(t_span, s0, sigma, rho, beta):\n",
-        "  s = np.array([1, 2, 3])\n",
-        "  dS = my_lorenz(0, s, 10, 28, 8/3)\n",
+        "  s = np.array([1,2,3])\n",
+        "  dS = my_lorenz(0,s,10,28,(8/3))\n",
         "  from functools import partial\n",
         "  t0 = t_span[0]\n",
         "  t1 = t_span[1]\n",
-        "  t = np.linspace(t0, tf, 20001)\n",
-        "  f = partial(my_lorenz, sigma=sigma, rho=rho, beta=beta)\n",
+        "  t = np.linspace(t0,tf,20001)\n",
+        "  f = partial(my_lorenz,sigma=sigma,beta=beta,rho=rho)\n",
         "\n",
-        "  sol = solve_ivp(f, t_span, s0, t_eval=t)\n",
-        "  T, X, Y, Z = sol.t, sol.y[0, :], sol.y[1, :], sol.y[2, :]\n",
+        "  sol = solve_ivp(f,t_span,s0,t_eval=t)\n",
+        "  T, X, Y, Z = sol.t, sol.y[0,:], sol.y[1,:], sol.y[2,:]\n",
         "  return [T, X, Y, Z]\n",
         "\n",
         "sigma = 10\n",
@@ -276,9 +276,9 @@
           "height": 574
         },
         "id": "6Rl4w7ojgRFP",
-        "outputId": "315c76ca-9f88-4562-a839-e84a5bb5995a"
+        "outputId": "4057dcbc-ed16-467c-8202-e0f718ba3ba4"
       },
-      "execution_count": 18,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
@@ -302,7 +302,7 @@
       "metadata": {
         "id": "1lN2wT2siIvb"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     }
   ]
